containers/c4-openshift-deploy-manually/solution/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: cbtest
  name: greetings
  labels: 
    app.kubernetes.io/part-of: greetings-app
spec:
  selector:
    matchLabels:
      deployment: greetings
  replicas: 1
  template:
    metadata:
      labels:
        deployment: greetings
    spec:
      containers:
        - name: greetings
          image: >-
            image-registry.openshift-image-registry.svc:5000/cbtest/greetings:latest
          ports:
            - containerPort: 7800
              protocol: TCP
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
