containers/c4-openshift-deploy-manually/solution/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  namespace: cbtest
  name: greetings
  labels: 
    app.kubernetes.io/part-of: greetings-app
spec:
  to:
    kind: Service
    name: greetings
    weight: 100
  port:
    targetPort: 7800-tcp
